cmake_minimum_required(VERSION 3.1)
set(CppFiles register.cpp crudeMC.cpp graphConvert.cpp graphAMInterface.cpp graphInterface.cpp graphNELInterface.cpp igraphInterface.cpp importanceSampling.cpp sequentialMethod.cpp conditionalMC.cpp defaultImportanceDensity.cpp)
set(HeaderFiles crudeMC.h graphConvert.h graphAMInterface.h graphInterface.h graphNELInterface.h igraphInterface.h importanceSampling.h sequentialMethod.h conditionalMC.h defaultImportanceDensity.h)
add_library(largeComponentRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(largeComponentRPackage PUBLIC largeComponentCommon Rcpp)
set_target_properties(largeComponentRPackage PROPERTIES OUTPUT_NAME "largeComponent")

if(WIN32)
	target_compile_definitions(largeComponentRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(largeComponentRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		set_target_properties(largeComponentRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
	endforeach()
else()
	set_target_properties(largeComponentRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(largeComponentRPackage PROPERTIES PREFIX "")
endif()
